--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ body {
   align-items: center;
   gap: 1rem 2rem;
   padding: 0.5rem 2rem 1rem;
-  /* box-shadow: 10px 5px 0px red; */
+  box-shadow: 0px 5px 5px #94a3b8;
+  z-index: 1;
 }
 
 form {
@@ -163,6 +164,7 @@ form [type="search"] {
   cursor: pointer;
 }
 
+/* **Main Content** */
 .main-content {
   grid-area: main-content;
   background-color: #cbd5e1;
