--- a/style.css
+++ b/style.css
@@ -6,16 +6,12 @@
   box-sizing: border-box;
 }
 
-html,
 body {
-  height: 100%;
+  height: 100svh;
   font-family: "Roboto", sans-serif;
-}
-
-body {
   display: grid;
   grid-template-columns: max-content 1fr;
-  grid-template-rows: 1fr 5fr;
+  grid-template-rows: auto minmax(0, 1fr);
   grid-template-areas:
     "sidebar header"
     "sidebar main-content";
@@ -28,7 +24,6 @@ body {
   color: white;
   font-weight: bold;
   padding: 1.5rem;
-  padding-right: 6rem;
   display: grid;
   align-content: start;
   gap: 3rem;
@@ -70,13 +65,10 @@ body {
   justify-self: center;
 }
 
+/* **Header** */
 .header {
   grid-area: header;
   background-color: #fff;
-}
-
-/* **Header** */
-.header {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
@@ -171,6 +163,7 @@ form [type="search"] {
   display: grid;
   grid-template-columns: 1fr auto;
   grid-template-areas: "projects aside";
+  grid-template-rows: 100%;
   padding: 1.5rem 1.5rem 1rem 1rem;
   gap: 1.5rem;
 }
@@ -178,7 +171,6 @@ form [type="search"] {
 /* **Main Content -- Projects** */
 .projects {
   display: grid;
-  grid-template-rows: min-content auto;
   gap: 1rem;
 }
 
@@ -188,12 +180,16 @@ form [type="search"] {
 }
 
 .cards {
+  border-radius: 0.5rem;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(35ch, 1fr));
+  overflow: auto;
+  scroll-snap-type: y mandatory;
   gap: 1.5rem;
 }
 
 .card {
+  scroll-snap-align: start;
   background-color: #fff;
   border-radius: 8px;
   border-left: 8px solid goldenrod;
@@ -227,6 +223,13 @@ form [type="search"] {
   display: grid;
   align-content: start;
   gap: 2.5rem;
+  overflow: auto;
+  border-radius: 0.5rem;
+  scroll-snap-type: y mandatory;
+}
+
+.aside > * {
+  scroll-snap-align: start;
 }
 
 .announcements {
@@ -316,4 +319,13 @@ form [type="search"] {
 }
 .user + span {
   color: #52525b;
+}
+
+/* **Scrollbar** */
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #52525b;
 }
