--- a/style.css
+++ b/style.css
@@ -17,6 +17,10 @@ body {
     "sidebar main-content";
 }
 
+img {
+  display: block;
+}
+
 /* **Sidebar** */
 .sidebar {
   grid-area: sidebar;
@@ -119,10 +123,6 @@ form [type="search"] {
   display: grid;
   grid-template-columns: auto 1fr;
   gap: 1rem;
-}
-
-.greeting img {
-  height: 5rem;
 }
 
 .greeting p {
@@ -304,10 +304,6 @@ form [type="search"] {
   gap: 1rem;
 }
 
-.trend .avatar {
-  height: 3rem;
-}
-
 .trend p {
   display: grid;
   align-items: center;
@@ -328,4 +324,43 @@ form [type="search"] {
 
 ::-webkit-scrollbar-thumb {
   background-color: #52525b;
+}
+
+/* **Avatars** */
+.cat {
+  background-color: rgb(250, 204, 21);
+}
+
+.dog {
+  background-color: rgb(224, 242, 254);
+}
+
+.superhero {
+  background-color: rgb(163, 163, 163);
+}
+
+.penguin {
+  background-color: rgb(253, 164, 175);
+}
+
+.greeting__avatar-wrapper {
+  width: 5rem;
+  aspect-ratio: 1/1;
+  padding: 0.5rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar-wrapper {
+  height: 3rem;
+  width: 3rem;
+  padding: 0.25rem;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.avatar-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
